@@ -55,9 +55,9 @@ import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashSet;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -92,7 +92,6 @@ import jenkins.scm.impl.form.NamedArrayList;
 import jenkins.scm.impl.trait.Discovery;
 import jenkins.scm.impl.trait.Selection;
 import jenkins.scm.impl.trait.WildcardSCMHeadFilterTrait;
-import org.apache.commons.lang.StringUtils;
 import org.eclipse.jgit.transport.RefSpec;
 import org.eclipse.jgit.transport.URIish;
 import org.jenkinsci.Symbol;
@@ -180,7 +179,7 @@ public class GitSCMSource extends AbstractGitSCMSource {
         if (!DEFAULT_INCLUDES.equals(includes) || !DEFAULT_EXCLUDES.equals(excludes)) {
             traits.add(new WildcardSCMHeadFilterTrait(includes, excludes));
         }
-        if (!DEFAULT_REMOTE_NAME.equals(remoteName) && StringUtils.isNotBlank(remoteName)) {
+        if (remoteName != null && !remoteName.isBlank() && !DEFAULT_REMOTE_NAME.equals(remoteName)) {
             traits.add(new RemoteNameSCMSourceTrait(remoteName));
         }
         if (ignoreOnPushNotifications) {
@@ -232,10 +231,10 @@ public class GitSCMSource extends AbstractGitSCMSource {
                     }
                 }
             }
-            if (remoteName != null && !DEFAULT_REMOTE_NAME.equals(remoteName) && StringUtils.isNotBlank(remoteName)) {
+            if (remoteName != null && !remoteName.isBlank() && !DEFAULT_REMOTE_NAME.equals(remoteName)) {
                 traits.add(new RemoteNameSCMSourceTrait(remoteName));
             }
-            if (StringUtils.isNotBlank(gitTool)) {
+            if (gitTool != null && !gitTool.isBlank()) {
                 traits.add(new GitToolSCMSourceTrait(gitTool));
             }
             if (browser != null) {
@@ -263,7 +262,7 @@ public class GitSCMSource extends AbstractGitSCMSource {
             if (!defaults.contains(rawRefSpecs.trim())) {
                 List<String> templates = new ArrayList<>();
                 for (String rawRefSpec : rawRefSpecs.split(" ")) {
-                    if (StringUtils.isBlank(rawRefSpec)) {
+                    if (rawRefSpec == null || rawRefSpec.isBlank()) {
                         continue;
                     }
                     if (defaults.contains(rawRefSpec)) {
@@ -293,11 +292,7 @@ public class GitSCMSource extends AbstractGitSCMSource {
     @DataBoundSetter
     public void setBrowser(GitRepositoryBrowser browser) {
         List<SCMSourceTrait> traits = new ArrayList<>(this.traits);
-        for (Iterator<SCMSourceTrait> iterator = traits.iterator(); iterator.hasNext(); ) {
-            if (iterator.next() instanceof GitBrowserSCMSourceTrait) {
-                iterator.remove();
-            }
-        }
+        traits.removeIf(scmSourceTrait -> scmSourceTrait instanceof GitBrowserSCMSourceTrait);
         if (browser != null) {
             traits.add(new GitBrowserSCMSourceTrait(browser));
         }
@@ -310,11 +305,7 @@ public class GitSCMSource extends AbstractGitSCMSource {
     public void setGitTool(String gitTool) {
         List<SCMSourceTrait> traits = new ArrayList<>(this.traits);
         gitTool = Util.fixEmptyAndTrim(gitTool);
-        for (Iterator<SCMSourceTrait> iterator = traits.iterator(); iterator.hasNext(); ) {
-            if (iterator.next() instanceof GitToolSCMSourceTrait) {
-                iterator.remove();
-            }
-        }
+        traits.removeIf(scmSourceTrait -> scmSourceTrait instanceof GitToolSCMSourceTrait);
         if (gitTool != null) {
             traits.add(new GitToolSCMSourceTrait(gitTool));
         }
@@ -327,11 +318,7 @@ public class GitSCMSource extends AbstractGitSCMSource {
     @Deprecated
     public void setExtensions(@CheckForNull List<GitSCMExtension> extensions) {
         List<SCMSourceTrait> traits = new ArrayList<>(this.traits);
-        for (Iterator<SCMSourceTrait> iterator = traits.iterator(); iterator.hasNext(); ) {
-            if (iterator.next() instanceof GitSCMExtensionTrait) {
-                iterator.remove();
-            }
-        }
+        traits.removeIf(scmSourceTrait -> scmSourceTrait instanceof GitSCMExtensionTrait);
         EXTENSIONS:
         for (GitSCMExtension extension : Util.fixNull(extensions)) {
             for (SCMSourceTraitDescriptor d : SCMSourceTrait.all()) {
@@ -472,7 +459,7 @@ public class GitSCMSource extends AbstractGitSCMSource {
                             : ACL.SYSTEM,
                     URIRequirementBuilder.fromUri(remote).build(),
                     GitClient.CREDENTIALS_MATCHER)) {
-                if (StringUtils.equals(value, o.value)) {
+                if (Objects.equals(value, o.value)) {
                     // TODO check if this type of credential is acceptable to the Git client or does it merit warning
                     // NOTE: we would need to actually lookup the credential to do the check, which may require
                     // fetching the actual credential instance from a remote credentials store. Perhaps this is
@@ -534,7 +521,7 @@ public class GitSCMSource extends AbstractGitSCMSource {
         }
 
         public List<SCMSourceTrait> getTraitsDefaults() {
-            return Collections.<SCMSourceTrait>singletonList(new BranchDiscoveryTrait());
+            return Collections.singletonList(new BranchDiscoveryTrait());
         }
 
         @NonNull
@@ -625,7 +612,7 @@ public class GitSCMSource extends AbstractGitSCMSource {
                                                 return Collections.emptyMap();
                                             }
                                         }
-                                        return Collections.<SCMHead, SCMRevision>singletonMap(head,
+                                        return Collections.singletonMap(head,
                                                 sha1 != null ? new GitBranchSCMRevision(head, sha1) : null);
                                     }
                                 }
@@ -657,7 +644,7 @@ public class GitSCMSource extends AbstractGitSCMSource {
                                     continue;
                                 }
                                 if (GitStatus.looselyMatches(uri, remote)) {
-                                    LOGGER.info("Triggering the indexing of " + owner.getFullDisplayName()
+                                    LOGGER.fine("Triggering the indexing of " + owner.getFullDisplayName()
                                             + " as a result of event from " + origin);
                                     triggerIndexing(owner, source);
                                     result.add(new GitStatus.ResponseContributor() {
