@@ -1,6 +1,5 @@
 package hudson.plugins.git;
 
-import com.cloudbees.plugins.credentials.Credentials;
 import com.cloudbees.plugins.credentials.CredentialsProvider;
 import com.cloudbees.plugins.credentials.CredentialsScope;
 import com.cloudbees.plugins.credentials.CredentialsStore;
@@ -10,34 +9,20 @@ import com.cloudbees.plugins.credentials.domains.Domain;
 import com.cloudbees.plugins.credentials.impl.UsernamePasswordCredentialsImpl;
 import com.gargoylesoftware.htmlunit.html.HtmlPage;
 
-import com.google.common.base.Function;
-import com.google.common.collect.Collections2;
-import com.google.common.collect.Lists;
-
 import hudson.EnvVars;
 import hudson.FilePath;
 import hudson.Functions;
 import hudson.Launcher;
-import hudson.matrix.Axis;
-import hudson.matrix.AxisList;
-import hudson.matrix.MatrixBuild;
-import hudson.matrix.MatrixProject;
 import hudson.model.*;
-import hudson.plugins.git.GitSCM.BuildChooserContextImpl;
 import hudson.plugins.git.GitSCM.DescriptorImpl;
-import hudson.plugins.git.browser.GitRepositoryBrowser;
 import hudson.plugins.git.browser.GithubWeb;
 import hudson.plugins.git.extensions.GitSCMExtension;
 import hudson.plugins.git.extensions.impl.*;
 import hudson.plugins.git.util.BuildChooser;
-import hudson.plugins.git.util.BuildChooserContext;
-import hudson.plugins.git.util.BuildChooserContext.ContextCallable;
 import hudson.plugins.git.util.BuildData;
 import hudson.plugins.git.util.GitUtils;
 import hudson.plugins.parameterizedtrigger.BuildTrigger;
 import hudson.plugins.parameterizedtrigger.ResultCondition;
-import hudson.remoting.Channel;
-import hudson.remoting.VirtualChannel;
 import hudson.scm.ChangeLogSet;
 import hudson.scm.PollingResult;
 import hudson.scm.PollingResult.Change;
@@ -45,28 +30,22 @@ import hudson.scm.SCMRevisionState;
 import hudson.security.ACL;
 import hudson.security.ACLContext;
 import hudson.slaves.DumbSlave;
-import hudson.slaves.EnvironmentVariablesNodeProperty.Entry;
 import hudson.tools.ToolLocationNodeProperty;
-import hudson.tools.ToolProperty;
-import hudson.triggers.SCMTrigger;
 import hudson.util.LogTaskListener;
 import hudson.util.RingBufferLogHandler;
 import hudson.util.StreamTaskListener;
 
-import jenkins.security.MasterToSlaveCallable;
 import org.apache.commons.io.FileUtils;
-import org.apache.commons.io.IOUtils;
 import org.eclipse.jgit.lib.Constants;
 import org.eclipse.jgit.lib.ObjectId;
 import org.eclipse.jgit.lib.PersonIdent;
 import org.eclipse.jgit.lib.Ref;
-import org.eclipse.jgit.lib.Repository;
+import org.eclipse.jgit.util.SystemReader;
 import org.jenkinsci.plugins.tokenmacro.TokenMacro;
 import org.jenkinsci.plugins.gitclient.*;
 import org.jenkinsci.plugins.workflow.cps.CpsFlowDefinition;
 import org.jenkinsci.plugins.workflow.job.WorkflowJob;
 import org.jenkinsci.plugins.workflow.job.WorkflowRun;
-import org.junit.Ignore;
 import org.junit.Rule;
 import org.junit.Test;
 import org.jvnet.hudson.test.LoggerRule;
@@ -81,8 +60,10 @@ import java.io.InputStream;
 import java.io.ObjectStreamException;
 import java.io.Serializable;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.text.MessageFormat;
 import java.util.*;
+import static java.util.concurrent.TimeUnit.SECONDS;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.regex.Pattern;
@@ -99,27 +80,31 @@ import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNotSame;
 import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertSame;
 import static org.junit.Assert.assertTrue;
+import static org.junit.Assume.assumeTrue;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.BeforeClass;
+import org.junit.ClassRule;
+import org.junit.rules.Stopwatch;
+import org.junit.rules.TestName;
+import org.junit.runner.OrderWith;
 
-import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
 import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.atLeastOnce;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
 import jenkins.model.Jenkins;
 import jenkins.plugins.git.CliGitCommand;
 import jenkins.plugins.git.GitSampleRepoRule;
+import jenkins.plugins.git.RandomOrder;
 
 /**
  * Tests for {@link GitSCM}.
  * @author ishaaq
  */
+@OrderWith(RandomOrder.class)
 public class GitSCMTest extends AbstractGitTestCase {
     @Rule
     public GitSampleRepoRule secondRepo = new GitSampleRepoRule();
@@ -129,8 +114,25 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     private CredentialsStore store = null;
 
+    @ClassRule
+    public static Stopwatch stopwatch = new Stopwatch();
+    @Rule
+    public TestName testName = new TestName();
+
+    private static final int MAX_SECONDS_FOR_THESE_TESTS = 570;
+
+    private boolean isTimeAvailable() {
+        String env = System.getenv("CI");
+        if (env == null || !Boolean.parseBoolean(env)) {
+            // Run all tests when not in CI environment
+            return true;
+        }
+        return stopwatch.runtime(SECONDS) <= MAX_SECONDS_FOR_THESE_TESTS;
+    }
+
     @BeforeClass
     public static void setGitDefaults() throws Exception {
+        SystemReader.getInstance().getUserConfig().clear();
         CliGitCommand gitCmd = new CliGitCommand(null);
         gitCmd.setDefaults();
     }
@@ -138,7 +140,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Before
     public void enableSystemCredentialsProvider() throws Exception {
         SystemCredentialsProvider.getInstance().setDomainCredentialsMap(
-                Collections.singletonMap(Domain.global(), Collections.<Credentials>emptyList()));
+                Collections.singletonMap(Domain.global(), Collections.emptyList()));
         for (CredentialsStore s : CredentialsProvider.lookupStores(Jenkins.get())) {
             if (s.getProvider() instanceof SystemCredentialsProvider.ProviderImpl) {
                 store = s;
@@ -166,13 +168,18 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void testAddGitTagAction() throws Exception {
+        /* Low value test of low value feature, never run on Windows, run 50% on others */
+        if (isWindows() || random.nextBoolean()) {
+            return;
+        }
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject project = setupSimpleProject("master");
         List<UserRemoteConfig> remoteConfigs = GitSCM.createRepoList("https://github.com/jenkinsci/git-plugin", "github");
         project.setScm(new GitSCM(remoteConfigs,
                 Collections.singletonList(new BranchSpec("master")), false, null, null, null, null));
 
         GitSCM scm = (GitSCM) project.getScm();
-        final DescriptorImpl descriptor = (DescriptorImpl) scm.getDescriptor();
+        final DescriptorImpl descriptor = scm.getDescriptor();
         boolean originalValue = scm.isAddGitTagAction();
         assertFalse("Wrong initial value for hide tag action", originalValue);
         descriptor.setAddGitTagAction(true);
@@ -209,6 +216,7 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void manageShouldAccessGlobalConfig() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         final String USER = "user";
         final String MANAGER = "manager";
         rule.jenkins.setSecurityRealm(rule.createDummySecurityRealm());
@@ -235,6 +243,7 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void trackCredentials() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         StandardCredentials credential = getInvalidCredential();
         store.addCredentials(Domain.global(), credential);
 
@@ -277,6 +286,7 @@ public class GitSCMTest extends AbstractGitTestCase {
      */
     @Test
     public void testBasic() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject project = setupSimpleProject("master");
 
         // create initial commit and then run the build against it:
@@ -302,6 +312,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Test
     @Issue("JENKINS-56176")
     public void testBasicRemotePoll() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
 //        FreeStyleProject project = setupProject("master", true, false);
         FreeStyleProject project = setupProject("master", false, null, null, null, true, null);
         // create initial commit and then run the build against it:
@@ -330,6 +341,7 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void testBranchSpecWithRemotesMaster() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject projectMasterBranch = setupProject("remotes/origin/master", false, null, null, null, true, null);
         // create initial commit and build
         final String commitFile1 = "commitFile1";
@@ -348,6 +360,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Test
     @Issue("JENKINS-31393")
     public void testSpecificRefspecs() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         List<UserRemoteConfig> repos = new ArrayList<>();
         repos.add(new UserRemoteConfig(testRepo.gitDir.getAbsolutePath(), "origin", "+refs/heads/foo:refs/remotes/foo", null));
 
@@ -380,6 +393,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Test
     @Issue("JENKINS-56404")
     public void testAvoidRedundantFetch() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         List<UserRemoteConfig> repos = new ArrayList<>();
         repos.add(new UserRemoteConfig(testRepo.gitDir.getAbsolutePath(), "origin", "+refs/heads/*:refs/remotes/*", null));
 
@@ -410,6 +424,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Test
     @Issue("JENKINS-56404")
     public void testAvoidRedundantFetchWithoutHonorRefSpec() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         List<UserRemoteConfig> repos = new ArrayList<>();
         repos.add(new UserRemoteConfig(testRepo.gitDir.getAbsolutePath(), "origin", "+refs/heads/foo:refs/remotes/foo", null));
 
@@ -454,6 +469,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Test
     @Issue("JENKINS-56404")
     public void testAvoidRedundantFetchWithHonorRefSpec() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         List<UserRemoteConfig> repos = new ArrayList<>();
         String refSpec = "+refs/heads/foo:refs/remotes/foo";
         repos.add(new UserRemoteConfig(testRepo.gitDir.getAbsolutePath(), "origin", refSpec, null));
@@ -491,6 +507,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Test
     @Issue("JENKINS-49757")
     public void testAvoidRedundantFetchWithNullRefspec() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         String nullRefspec = null;
         List<UserRemoteConfig> repos = new ArrayList<>();
         repos.add(new UserRemoteConfig(testRepo.gitDir.getAbsolutePath(), "origin", nullRefspec, null));
@@ -525,6 +542,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Test
     @Issue("JENKINS-49757")
     public void testRetainRedundantFetch() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         String refspec = "+refs/heads/*:refs/remotes/origin/* +refs/pull/553/head:refs/remotes/origin/pull/553";
         List<UserRemoteConfig> repos = new ArrayList<>();
         repos.add(new UserRemoteConfig(testRepo.gitDir.getAbsolutePath(), "origin", refspec, null));
@@ -559,6 +577,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Test
     @Issue("JENKINS-49757")
     public void testRetainRedundantFetchIfSecondFetchIsAllowed() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         String refspec = "+refs/heads/*:refs/remotes/*";
         List<UserRemoteConfig> repos = new ArrayList<>();
         repos.add(new UserRemoteConfig(testRepo.gitDir.getAbsolutePath(), "origin", refspec, null));
@@ -567,7 +586,7 @@ public class GitSCMTest extends AbstractGitTestCase {
         FreeStyleProject projectWithMaster = setupProject(repos, Collections.singletonList(new BranchSpec("master")), null, false, null);
 
         GitSCM scm = (GitSCM) projectWithMaster.getScm();
-        final DescriptorImpl descriptor = (DescriptorImpl) scm.getDescriptor();
+        final DescriptorImpl descriptor = scm.getDescriptor();
         assertThat("Redundant fetch is skipped by default", scm.isAllowSecondFetch(), is(false));
         descriptor.setAllowSecondFetch(true);
         assertThat("Redundant fetch should be allowed", scm.isAllowSecondFetch(), is(true));
@@ -633,6 +652,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Test
     @Issue("JENKINS-36507")
     public void testSpecificRefspecsWithoutCloneOption() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         List<UserRemoteConfig> repos = new ArrayList<>();
         repos.add(new UserRemoteConfig(testRepo.gitDir.getAbsolutePath(), "origin", "+refs/heads/foo:refs/remotes/foo", null));
         FreeStyleProject projectWithMaster = setupProject(repos, Collections.singletonList(new BranchSpec("master")), null, false, null);
@@ -659,6 +679,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Test
     @Issue("JENKINS-38608")
     public void testAddFirstRepositoryWithNullRepoURL() throws Exception{
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         List<UserRemoteConfig> repos = new ArrayList<>();
         repos.add(new UserRemoteConfig(null, null, null, null));
         FreeStyleProject project = setupProject(repos, Collections.singletonList(new BranchSpec("master")), null, false, null);
@@ -681,6 +702,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Test
     @Issue("JENKINS-38608")
     public void testAddSecondRepositoryWithNullRepoURL() throws Exception{
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         String repoURL = "https://example.com/non-empty/repo/url";
         List<UserRemoteConfig> repos = new ArrayList<>();
         repos.add(new UserRemoteConfig(repoURL, null, null, null));
@@ -697,6 +719,7 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void testBranchSpecWithRemotesHierarchical() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
       FreeStyleProject projectMasterBranch = setupProject("master", false, null, null, null, true, null);
       FreeStyleProject projectHierarchicalBranch = setupProject("remotes/origin/rel-1/xy", false, null, null, null, true, null);
       // create initial commit
@@ -712,6 +735,7 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void testBranchSpecUsingTagWithSlash() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject projectMasterBranch = setupProject("path/tag", false, null, null, null, true, null);
         // create initial commit and build
         final String commitFile1 = "commitFile1";
@@ -722,6 +746,7 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void testBasicIncludedRegion() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject project = setupProject("master", false, null, null, null, ".*3");
 
         // create initial commit and then run the build against it:
@@ -764,6 +789,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Issue({"JENKINS-20389","JENKINS-23606"})
     @Test
     public void testMergeCommitInExcludedRegionIsIgnored() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         final String branchToMerge = "new-branch-we-merge-to-master";
 
         FreeStyleProject project = setupProject("master", false, null, ".*\\.excluded", null, ".*\\.included");
@@ -800,6 +826,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Issue({"JENKINS-20389","JENKINS-23606"})
     @Test
     public void testMergeCommitInExcludedDirectoryIsIgnored() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         final String branchToMerge = "new-branch-we-merge-to-master";
 
         FreeStyleProject project = setupProject("master", false, null, "excluded/.*", null, "included/.*");
@@ -836,6 +863,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Issue({"JENKINS-20389","JENKINS-23606"})
     @Test
     public void testMergeCommitInIncludedRegionIsProcessed() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         final String branchToMerge = "new-branch-we-merge-to-master";
 
         FreeStyleProject project = setupProject("master", false, null, ".*\\.excluded", null, ".*\\.included");
@@ -873,6 +901,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Issue({"JENKINS-20389","JENKINS-23606"})
     @Test
     public void testMergeCommitInIncludedDirectoryIsProcessed() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         final String branchToMerge = "new-branch-we-merge-to-master";
 
         FreeStyleProject project = setupProject("master", false, null, "excluded/.*", null, "included/.*");
@@ -911,6 +940,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Issue({"JENKINS-20389","JENKINS-23606"})
     @Test
     public void testMergeCommitOutsideIncludedRegionIsIgnored() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         final String branchToMerge = "new-branch-we-merge-to-master";
 
         FreeStyleProject project = setupProject("master", false, null, null, null, ".*\\.included");
@@ -948,6 +978,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Issue({"JENKINS-20389","JENKINS-23606"})
     @Test
     public void testMergeCommitOutsideIncludedDirectoryIsIgnored() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         final String branchToMerge = "new-branch-we-merge-to-master";
 
         FreeStyleProject project = setupProject("master", false, null, null, null, "included/.*");
@@ -986,6 +1017,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Issue({"JENKINS-20389","JENKINS-23606"})
     @Test
     public void testMergeCommitOutsideExcludedRegionIsProcessed() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         final String branchToMerge = "new-branch-we-merge-to-master";
 
         FreeStyleProject project = setupProject("master", false, null, ".*\\.excluded", null, null);
@@ -1024,6 +1056,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Issue({"JENKINS-20389","JENKINS-23606"})
     @Test
     public void testMergeCommitOutsideExcludedDirectoryIsProcessed() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         final String branchToMerge = "new-branch-we-merge-to-master";
 
         FreeStyleProject project = setupProject("master", false, null, "excluded/.*", null, null);
@@ -1053,6 +1086,7 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void testIncludedRegionWithDeeperCommits() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject project = setupProject("master", false, null, null, null, ".*3");
 
         // create initial commit and then run the build against it:
@@ -1090,6 +1124,7 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void testBasicExcludedRegion() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject project = setupProject("master", false, null, ".*2", null, null);
 
         // create initial commit and then run the build against it:
@@ -1133,6 +1168,7 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void testCleanBeforeCheckout() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
     	FreeStyleProject p = setupProject("master", false, null, null, "Jane Doe", null);
         ((GitSCM)p.getScm()).getExtensions().add(new CleanBeforeCheckout());
 
@@ -1155,6 +1191,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Issue("JENKINS-8342")
     @Test
     public void testExcludedRegionMultiCommit() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         // Got 2 projects, each one should only build if changes in its own file
         FreeStyleProject clientProject = setupProject("master", false, null, ".*serverFile", null, null);
         FreeStyleProject serverProject = setupProject("master", false, null, ".*clientFile", null, null);
@@ -1188,6 +1225,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Issue("JENKINS-8342")
     @Test
     public void testMultipleBranchWithExcludedUser() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         final String branch1 = "Branch1";
         final String branch2 = "Branch2";
 
@@ -1257,6 +1295,7 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void testBasicExcludedUser() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject project = setupProject("master", false, null, null, "Jane Doe", null);
 
         // create initial commit and then run the build against it:
@@ -1289,6 +1328,7 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void testBasicInSubdir() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject project = setupSimpleProject("master");
         ((GitSCM)project.getScm()).getExtensions().add(new RelativeTargetDirectory("subdir"));
 
@@ -1308,35 +1348,8 @@ public class GitSCMTest extends AbstractGitTestCase {
         final Set<User> culprits = build2.getCulprits();
         assertEquals("The build should have only one culprit", 1, culprits.size());
         assertEquals("", janeDoe.getName(), culprits.iterator().next().getFullName());
-        assertEquals("The workspace should have a 'subdir' subdirectory, but does not.", true,
-                     build2.getWorkspace().child("subdir").exists());
-        assertEquals("The 'subdir' subdirectory should contain commitFile2, but does not.", true,
-                build2.getWorkspace().child("subdir").child(commitFile2).exists());
-        rule.assertBuildStatusSuccess(build2);
-        assertFalse("scm polling should not detect any more changes after build", project.poll(listener).hasChanges());
-    }
-
-    @Test
-    public void testBasicWithAgent() throws Exception {
-        FreeStyleProject project = setupSimpleProject("master");
-        project.setAssignedLabel(rule.createSlave().getSelfLabel());
-
-        // create initial commit and then run the build against it:
-        final String commitFile1 = "commitFile1";
-        commit(commitFile1, johnDoe, "Commit number 1");
-        build(project, Result.SUCCESS, commitFile1);
-
-        assertFalse("scm polling should not detect any more changes after build", project.poll(listener).hasChanges());
-
-        final String commitFile2 = "commitFile2";
-        commit(commitFile2, janeDoe, "Commit number 2");
-        assertTrue("scm polling did not detect commit2 change", project.poll(listener).hasChanges());
-        //... and build it...
-        final FreeStyleBuild build2 = build(project, Result.SUCCESS, commitFile2);
-        final Set<User> culprits = build2.getCulprits();
-        assertEquals("The build should have only one culprit", 1, culprits.size());
-        assertEquals("", janeDoe.getName(), culprits.iterator().next().getFullName());
-        assertTrue(build2.getWorkspace().child(commitFile2).exists());
+        assertTrue("The workspace should have a 'subdir' subdirectory, but does not.", build2.getWorkspace().child("subdir").exists());
+        assertTrue("The 'subdir' subdirectory should contain commitFile2, but does not.", build2.getWorkspace().child("subdir").child(commitFile2).exists());
         rule.assertBuildStatusSuccess(build2);
         assertFalse("scm polling should not detect any more changes after build", project.poll(listener).hasChanges());
     }
@@ -1344,6 +1357,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Issue("HUDSON-7547")
     @Test
     public void testBasicWithAgentNoExecutorsOnMaster() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject project = setupSimpleProject("master");
 
         rule.jenkins.setNumExecutors(0);
@@ -1372,6 +1386,7 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void testAuthorOrCommitterFalse() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         // Test with authorOrCommitter set to false and make sure we get the committer.
         FreeStyleProject project = setupSimpleProject("master");
 
@@ -1399,6 +1414,7 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void testAuthorOrCommitterTrue() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         // Next, test with authorOrCommitter set to true and make sure we get the author.
         FreeStyleProject project = setupSimpleProject("master");
         ((GitSCM)project.getScm()).getExtensions().add(new AuthorInChangelog());
@@ -1427,6 +1443,7 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void testNewCommitToUntrackedBranchDoesNotTriggerBuild() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject project = setupSimpleProject("master");
 
         // create initial commit and then run the build against it:
@@ -1448,6 +1465,7 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void testEnvVarsAvailable() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject project = setupSimpleProject("master");
 
         final String commitFile1 = "commitFile1";
@@ -1470,22 +1488,9 @@ public class GitSCMTest extends AbstractGitTestCase {
         rule.waitForMessage(checkoutString(project, GitSCM.GIT_PREVIOUS_SUCCESSFUL_COMMIT), build1);
     }
 
-    @Issue("HUDSON-7411")
-    @Test
-    public void testNodeEnvVarsAvailable() throws Exception {
-        FreeStyleProject project = setupSimpleProject("master");
-        DumbSlave agent = rule.createSlave();
-        setVariables(agent, new Entry("TESTKEY", "agent value"));
-        project.setAssignedLabel(agent.getSelfLabel());
-        final String commitFile1 = "commitFile1";
-        commit(commitFile1, johnDoe, "Commit number 1");
-        build(project, Result.SUCCESS, commitFile1);
-
-        assertEquals("agent value", getEnvVars(project).get("TESTKEY"));
-    }
-
     @Test
     public void testNodeOverrideGit() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         GitSCM scm = new GitSCM(null);
 
         DumbSlave agent = rule.createSlave();
@@ -1509,6 +1514,7 @@ public class GitSCMTest extends AbstractGitTestCase {
      */
     @Test
     public void testGitSCMCanBuildAgainstTags() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         final String mytag = "mytag";
         FreeStyleProject project = setupSimpleProject(mytag);
         build(project, Result.FAILURE); // fail, because there's nothing to be checked out here
@@ -1567,6 +1573,7 @@ public class GitSCMTest extends AbstractGitTestCase {
      */
     @Test
     public void testMultipleBranchBuild() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         // empty string will result in a project that tracks against changes in all branches:
         final FreeStyleProject project = setupSimpleProject("");
         final String commitFile1 = "commitFile1";
@@ -1600,6 +1607,7 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void testMultipleBranchesWithTags() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         List<BranchSpec> branchSpecs = Arrays.asList(
                 new BranchSpec("refs/tags/v*"),
                 new BranchSpec("refs/remotes/origin/non-existent"));
@@ -1636,12 +1644,15 @@ public class GitSCMTest extends AbstractGitTestCase {
     @SuppressWarnings("ResultOfObjectAllocationIgnored")
     @Test
     public void testBlankRepositoryName() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         new GitSCM(null);
     }
 
     @Issue("JENKINS-10060")
     @Test
     public void testSubmoduleFixup() throws Exception {
+        /* Unreliable on Windows and not a platform specific test */
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         File repo = secondRepo.getRoot();
         FilePath moduleWs = new FilePath(repo);
         org.jenkinsci.plugins.gitclient.GitClient moduleRepo = Git.with(listener, new EnvVars()).in(repo).getClient();
@@ -1668,69 +1679,22 @@ public class GitSCMTest extends AbstractGitTestCase {
         rule.jenkins.rebuildDependencyGraph();
 
 
-        FreeStyleBuild ub = rule.assertBuildStatusSuccess(u.scheduleBuild2(0));
+        FreeStyleBuild ub = rule.buildAndAssertSuccess(u);
         for  (int i=0; (d.getLastBuild()==null || d.getLastBuild().isBuilding()) && i<100; i++) // wait only up to 10 sec to avoid infinite loop
             Thread.sleep(100);
 
         FreeStyleBuild db = d.getLastBuild();
         assertNotNull("downstream build didn't happen",db);
+
+        db = rule.waitForCompletion(db);
         rule.assertBuildStatusSuccess(db);
-    }
-
-    @Test
-    public void testBuildChooserContext() throws Exception {
-        final FreeStyleProject p = createFreeStyleProject();
-        final FreeStyleBuild b = rule.assertBuildStatusSuccess(p.scheduleBuild2(0));
-
-        BuildChooserContextImpl c = new BuildChooserContextImpl(p, b, null);
-        c.actOnBuild(new ContextCallable<Run<?,?>, Object>() {
-            public Object invoke(Run param, VirtualChannel channel) throws IOException, InterruptedException {
-                assertSame(param,b);
-                return null;
-            }
-        });
-        c.actOnProject(new ContextCallable<Job<?,?>, Object>() {
-            public Object invoke(Job param, VirtualChannel channel) throws IOException, InterruptedException {
-                assertSame(param,p);
-                return null;
-            }
-        });
-        DumbSlave agent = rule.createOnlineSlave();
-        assertEquals(p.toString(), agent.getChannel().call(new BuildChooserContextTestCallable(c)));
-    }
-
-    private static class BuildChooserContextTestCallable extends MasterToSlaveCallable<String,IOException> {
-        private final BuildChooserContext c;
-
-        public BuildChooserContextTestCallable(BuildChooserContext c) {
-            this.c = c;
-        }
-
-        public String call() throws IOException {
-            try {
-                return c.actOnProject(new ContextCallable<Job<?,?>, String>() {
-                    public String invoke(Job<?,?> param, VirtualChannel channel) throws IOException, InterruptedException {
-                        assertTrue(channel instanceof Channel);
-                        assertTrue(Jenkins.getInstanceOrNull()!=null);
-                        return param.toString();
-                    }
-                });
-            } catch (InterruptedException e) {
-                throw new IOException(e);
-            }
-        }
-
     }
 
     // eg: "jane doe and john doe should be the culprits", culprits, [johnDoe, janeDoe])
     static public void assertCulprits(String assertMsg, Set<User> actual, PersonIdent[] expected)
     {
-        Collection<String> fullNames = Collections2.transform(actual, new Function<User,String>() {
-            public String apply(User u)
-            {
-                return u.getFullName();
-            }
-        });
+        List<String> fullNames =
+                actual.stream().map(User::getFullName).collect(Collectors.toList());
 
         for(PersonIdent p : expected)
         {
@@ -1740,6 +1704,7 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void testHideCredentials() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject project = setupSimpleProject("master");
         store.addCredentials(Domain.global(), createCredential(CredentialsScope.GLOBAL, "github"));
         // setup global config
@@ -1748,7 +1713,7 @@ public class GitSCMTest extends AbstractGitTestCase {
                 Collections.singletonList(new BranchSpec("master")), false, null, null, null, null));
 
         GitSCM scm = (GitSCM) project.getScm();
-        final DescriptorImpl descriptor = (DescriptorImpl) scm.getDescriptor();
+        final DescriptorImpl descriptor = scm.getDescriptor();
         assertFalse("Wrong initial value for hide credentials", scm.isHideCredentials());
         descriptor.setHideCredentials(true);
         assertTrue("Hide credentials not set", scm.isHideCredentials());
@@ -1778,11 +1743,12 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void testEmailCommitter() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject project = setupSimpleProject("master");
 
         // setup global config
         GitSCM scm = (GitSCM) project.getScm();
-        final DescriptorImpl descriptor = (DescriptorImpl) scm.getDescriptor();
+        final DescriptorImpl descriptor = scm.getDescriptor();
         assertFalse("Wrong initial value for create account based on e-mail", scm.isCreateAccountBasedOnEmail());
         descriptor.setCreateAccountBasedOnEmail(true);
         assertTrue("Create account based on e-mail not set", scm.isCreateAccountBasedOnEmail());
@@ -1819,6 +1785,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Issue("JENKINS-59868")
     @Test
     public void testNonExistentWorkingDirectoryPoll() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject project = setupSimpleProject("master");
 
         // create initial commit and then run the build against it
@@ -1852,6 +1819,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     // Disabled - consistently fails, needs more analysis
     // @Test
     public void testFetchFromMultipleRepositories() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject project = setupSimpleProject("master");
 
         TestGitRepo secondTestRepo = new TestGitRepo("second", secondRepo.getRoot(), listener);
@@ -1863,7 +1831,7 @@ public class GitSCMTest extends AbstractGitTestCase {
                 remotes,
                 Collections.singletonList(new BranchSpec("master")),
                 null, null,
-                Collections.<GitSCMExtension>emptyList()));
+                Collections.emptyList()));
 
         // create initial commit and then run the build against it:
         final String commitFile1 = "commitFile1";
@@ -1903,7 +1871,7 @@ public class GitSCMTest extends AbstractGitTestCase {
                 remotes,
                 Collections.singletonList(new BranchSpec(branchName)),
                 null, null,
-                Collections.<GitSCMExtension>emptyList()));
+                Collections.emptyList()));
 
         final FreeStyleBuild build = build(project, Result.SUCCESS, commitFile1);
         rule.assertBuildStatusSuccess(build);
@@ -1922,6 +1890,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Issue("JENKINS-25639")
     @Test
     public void testCommitDetectedOnlyOnceInMultipleRepositories() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject project = setupSimpleProject("master");
 
         TestGitRepo secondTestRepo = new TestGitRepo("secondRepo", secondRepo.getRoot(), listener);
@@ -1933,7 +1902,7 @@ public class GitSCMTest extends AbstractGitTestCase {
                 remotes,
                 Collections.singletonList(new BranchSpec("origin/master")),
                 null, null,
-                Collections.<GitSCMExtension>emptyList());
+                Collections.emptyList());
         project.setScm(gitSCM);
 
         /* Check that polling would force build through
@@ -1971,13 +1940,14 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void testMerge() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject project = setupSimpleProject("master");
 
         GitSCM scm = new GitSCM(
                 createRemoteRepositories(),
                 Collections.singletonList(new BranchSpec("*")),
                 null, null,
-                Collections.<GitSCMExtension>emptyList());
+                Collections.emptyList());
         scm.getExtensions().add(new PreBuildMerge(new UserMergeOptions("origin", "integration", "default", MergeCommand.GitPluginFastForwardMode.FF)));
         addChangelogToBranchExtension(scm);
         project.setScm(scm);
@@ -2011,13 +1981,14 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Issue("JENKINS-20392")
     @Test
     public void testMergeChangelog() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject project = setupSimpleProject("master");
 
         GitSCM scm = new GitSCM(
                 createRemoteRepositories(),
                 Collections.singletonList(new BranchSpec("*")),
                 null, null,
-                Collections.<GitSCMExtension>emptyList());
+                Collections.emptyList());
         scm.getExtensions().add(new PreBuildMerge(new UserMergeOptions("origin", "integration", "default", MergeCommand.GitPluginFastForwardMode.FF)));
         addChangelogToBranchExtension(scm);
         project.setScm(scm);
@@ -2044,54 +2015,15 @@ public class GitSCMTest extends AbstractGitTestCase {
     }
 
     @Test
-    public void testMergeWithAgent() throws Exception {
-        FreeStyleProject project = setupSimpleProject("master");
-        project.setAssignedLabel(rule.createSlave().getSelfLabel());
-
-        GitSCM scm = new GitSCM(
-                createRemoteRepositories(),
-                Collections.singletonList(new BranchSpec("*")),
-                null, null,
-                Collections.<GitSCMExtension>emptyList());
-        scm.getExtensions().add(new PreBuildMerge(new UserMergeOptions("origin", "integration", null, null)));
-        addChangelogToBranchExtension(scm);
-        project.setScm(scm);
-
-        // create initial commit and then run the build against it:
-        commit("commitFileBase", johnDoe, "Initial Commit");
-        testRepo.git.branch("integration");
-        build(project, Result.SUCCESS, "commitFileBase");
-
-        testRepo.git.checkout(null, "topic1");
-        final String commitFile1 = "commitFile1";
-        commit(commitFile1, johnDoe, "Commit number 1");
-        final FreeStyleBuild build1 = build(project, Result.SUCCESS, commitFile1);
-        assertTrue(build1.getWorkspace().child(commitFile1).exists());
-
-        assertFalse("scm polling should not detect any more changes after build", project.poll(listener).hasChanges());
-        // do what the GitPublisher would do
-        testRepo.git.deleteBranch("integration");
-        testRepo.git.checkout("topic1", "integration");
-
-        testRepo.git.checkout("master", "topic2");
-        final String commitFile2 = "commitFile2";
-        commit(commitFile2, johnDoe, "Commit number 2");
-        assertTrue("scm polling did not detect commit2 change", project.poll(listener).hasChanges());
-        final FreeStyleBuild build2 = build(project, Result.SUCCESS, commitFile2);
-        assertTrue(build2.getWorkspace().child(commitFile2).exists());
-        rule.assertBuildStatusSuccess(build2);
-        assertFalse("scm polling should not detect any more changes after build", project.poll(listener).hasChanges());
-    }
-
-    @Test
     public void testMergeFailed() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject project = setupSimpleProject("master");
 
         GitSCM scm = new GitSCM(
                 createRemoteRepositories(),
                 Collections.singletonList(new BranchSpec("*")),
                 null, null,
-                Collections.<GitSCMExtension>emptyList());
+                Collections.emptyList());
         project.setScm(scm);
         scm.getExtensions().add(new PreBuildMerge(new UserMergeOptions("origin", "integration", "", MergeCommand.GitPluginFastForwardMode.FF)));
         addChangelogToBranchExtension(scm);
@@ -2115,21 +2047,21 @@ public class GitSCMTest extends AbstractGitTestCase {
         testRepo.git.checkout("master", "topic2");
         commit(commitFile1, "other content", johnDoe, "Commit number 2");
         assertTrue("scm polling did not detect commit2 change", project.poll(listener).hasChanges());
-        final FreeStyleBuild build2 = build(project, Result.FAILURE);
-        rule.assertBuildStatus(Result.FAILURE, build2);
+        rule.buildAndAssertStatus(Result.FAILURE, project);
         assertFalse("scm polling should not detect any more changes after build", project.poll(listener).hasChanges());
     }
     
     @Issue("JENKINS-25191")
     @Test
     public void testMultipleMergeFailed() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
     	FreeStyleProject project = setupSimpleProject("master");
     	
     	GitSCM scm = new GitSCM(
     			createRemoteRepositories(),
     			Collections.singletonList(new BranchSpec("master")),
     			null, null,
-    			Collections.<GitSCMExtension>emptyList());
+    			Collections.emptyList());
     	project.setScm(scm);
 	scm.getExtensions().add(new PreBuildMerge(new UserMergeOptions("origin", "integration1", "", MergeCommand.GitPluginFastForwardMode.FF)));
 	scm.getExtensions().add(new PreBuildMerge(new UserMergeOptions("origin", "integration2", "", MergeCommand.GitPluginFastForwardMode.FF)));
@@ -2153,89 +2085,8 @@ public class GitSCMTest extends AbstractGitTestCase {
     }
 
     @Test
-    public void testMergeFailedWithAgent() throws Exception {
-        FreeStyleProject project = setupSimpleProject("master");
-        project.setAssignedLabel(rule.createSlave().getSelfLabel());
-
-        GitSCM scm = new GitSCM(
-                createRemoteRepositories(),
-                Collections.singletonList(new BranchSpec("*")),
-                null, null,
-                Collections.<GitSCMExtension>emptyList());
-        scm.getExtensions().add(new PreBuildMerge(new UserMergeOptions("origin", "integration", null, null)));
-        addChangelogToBranchExtension(scm);
-        project.setScm(scm);
-
-        // create initial commit and then run the build against it:
-        commit("commitFileBase", johnDoe, "Initial Commit");
-        testRepo.git.branch("integration");
-        build(project, Result.SUCCESS, "commitFileBase");
-
-        testRepo.git.checkout(null, "topic1");
-        final String commitFile1 = "commitFile1";
-        commit(commitFile1, johnDoe, "Commit number 1");
-        final FreeStyleBuild build1 = build(project, Result.SUCCESS, commitFile1);
-        assertTrue(build1.getWorkspace().child(commitFile1).exists());
-
-        assertFalse("scm polling should not detect any more changes after build", project.poll(listener).hasChanges());
-        // do what the GitPublisher would do
-        testRepo.git.deleteBranch("integration");
-        testRepo.git.checkout("topic1", "integration");
-
-        testRepo.git.checkout("master", "topic2");
-        commit(commitFile1, "other content", johnDoe, "Commit number 2");
-        assertTrue("scm polling did not detect commit2 change", project.poll(listener).hasChanges());
-        final FreeStyleBuild build2 = build(project, Result.FAILURE);
-        rule.assertBuildStatus(Result.FAILURE, build2);
-        assertFalse("scm polling should not detect any more changes after build", project.poll(listener).hasChanges());
-    }
-
-
-    @Test
-    public void testMergeWithMatrixBuild() throws Exception {
-        
-        //Create a matrix project and a couple of axes
-        MatrixProject project = rule.jenkins.createProject(MatrixProject.class, "xyz");
-        project.setAxes(new AxisList(new Axis("VAR","a","b")));
-        
-        GitSCM scm = new GitSCM(
-                createRemoteRepositories(),
-                Collections.singletonList(new BranchSpec("*")),
-                null, null,
-                Collections.<GitSCMExtension>emptyList());
-        scm.getExtensions().add(new PreBuildMerge(new UserMergeOptions("origin", "integration", null, null)));
-        addChangelogToBranchExtension(scm);
-        project.setScm(scm);
-
-        // create initial commit and then run the build against it:
-        commit("commitFileBase", johnDoe, "Initial Commit");
-        testRepo.git.branch("integration");
-        build(project, Result.SUCCESS, "commitFileBase");
-        
-        
-        testRepo.git.checkout(null, "topic1");
-        final String commitFile1 = "commitFile1";
-        commit(commitFile1, johnDoe, "Commit number 1");
-        final MatrixBuild build1 = build(project, Result.SUCCESS, commitFile1);
-        assertTrue(build1.getWorkspace().child(commitFile1).exists());
-
-        assertFalse("scm polling should not detect any more changes after build", project.poll(listener).hasChanges());
-        // do what the GitPublisher would do
-        testRepo.git.deleteBranch("integration");
-        testRepo.git.checkout("topic1", "integration");
-
-        testRepo.git.checkout("master", "topic2");
-        final String commitFile2 = "commitFile2";
-        commit(commitFile2, johnDoe, "Commit number 2");
-        assertTrue("scm polling did not detect commit2 change", project.poll(listener).hasChanges());
-        final MatrixBuild build2 = build(project, Result.SUCCESS, commitFile2);
-        assertTrue(build2.getWorkspace().child(commitFile2).exists());
-        rule.assertBuildStatusSuccess(build2);
-        assertFalse("scm polling should not detect any more changes after build", project.poll(listener).hasChanges());
-    }
-
-    @Test
     public void testEnvironmentVariableExpansion() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject project = createFreeStyleProject();
         project.setScm(new GitSCM("${CAT}"+testRepo.gitDir.getPath()));
 
@@ -2263,89 +2114,17 @@ public class GitSCMTest extends AbstractGitTestCase {
         }
     }
 
-    private List<UserRemoteConfig> createRepoList(String url) {
-        List<UserRemoteConfig> repoList = new ArrayList<>();
-        repoList.add(new UserRemoteConfig(url, null, null, null));
-        return repoList;
-    }
-
-    /*
-     * Makes sure that git browser URL is preserved across config round trip.
-     */
-    @Issue("JENKINS-22604")
-    @Test
-    public void testConfigRoundtripURLPreserved() throws Exception {
-        FreeStyleProject p = createFreeStyleProject();
-        final String url = "https://github.com/jenkinsci/jenkins";
-        GitRepositoryBrowser browser = new GithubWeb(url);
-        GitSCM scm = new GitSCM(createRepoList(url),
-                                Collections.singletonList(new BranchSpec("")),
-                                browser, null, null);
-        p.setScm(scm);
-        rule.configRoundtrip(p);
-        rule.assertEqualDataBoundBeans(scm,p.getScm());
-        assertEquals("Wrong key", "git " + url, scm.getKey());
-    }
-
-    /*
-     * Makes sure that git extensions are preserved across config round trip.
-     */
-    @Issue("JENKINS-33695")
-    @Test
-    public void testConfigRoundtripExtensionsPreserved() throws Exception {
-        FreeStyleProject p = createFreeStyleProject();
-        final String url = "git://github.com/jenkinsci/git-plugin.git";
-        GitRepositoryBrowser browser = new GithubWeb(url);
-        GitSCM scm = new GitSCM(createRepoList(url),
-                Collections.singletonList(new BranchSpec("*/master")),
-                browser, null, null);
-        p.setScm(scm);
-
-        /* Assert that no extensions are loaded initially */
-        assertEquals(Collections.emptyList(), scm.getExtensions().toList());
-
-        /* Add LocalBranch extension */
-        LocalBranch localBranchExtension = new LocalBranch("**");
-        scm.getExtensions().add(localBranchExtension);
-        assertTrue(scm.getExtensions().toList().contains(localBranchExtension));
-
-        /* Save the configuration */
-        rule.configRoundtrip(p);
-        List<GitSCMExtension> extensions = scm.getExtensions().toList();;
-        assertTrue(extensions.contains(localBranchExtension));
-        assertEquals("Wrong extension count before reload", 1, extensions.size());
-
-        /* Reload configuration from disc */
-        p.doReload();
-        GitSCM reloadedGit = (GitSCM) p.getScm();
-        List<GitSCMExtension> reloadedExtensions = reloadedGit.getExtensions().toList();
-        assertEquals("Wrong extension count after reload", 1, reloadedExtensions.size());
-        LocalBranch reloadedLocalBranch = (LocalBranch) reloadedExtensions.get(0);
-        assertEquals(localBranchExtension.getLocalBranch(), reloadedLocalBranch.getLocalBranch());
-    }
-
-    /*
-     * Makes sure that the configuration form works.
-     */
-    @Test
-    public void testConfigRoundtrip() throws Exception {
-        FreeStyleProject p = createFreeStyleProject();
-        GitSCM scm = new GitSCM("https://github.com/jenkinsci/jenkins");
-        p.setScm(scm);
-        rule.configRoundtrip(p);
-        rule.assertEqualDataBoundBeans(scm,p.getScm());
-    }
-
     /*
      * Sample configuration that should result in no extensions at all
      */
     @Test
     public void testDataCompatibility1() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject p = (FreeStyleProject) rule.jenkins.createProjectFromXML("foo", getClass().getResourceAsStream("GitSCMTest/old1.xml"));
         GitSCM oldGit = (GitSCM) p.getScm();
         assertEquals(Collections.emptyList(), oldGit.getExtensions().toList());
         assertEquals(0, oldGit.getSubmoduleCfg().size());
-        assertEquals("git git://github.com/jenkinsci/model-ant-project.git", oldGit.getKey());
+        assertEquals("git https://github.com/jenkinsci/model-ant-project.git", oldGit.getKey());
         assertThat(oldGit.getEffectiveBrowser(), instanceOf(GithubWeb.class));
         GithubWeb browser = (GithubWeb) oldGit.getEffectiveBrowser();
         assertEquals(browser.getRepoUrl(), "https://github.com/jenkinsci/model-ant-project.git/");
@@ -2366,24 +2145,45 @@ public class GitSCMTest extends AbstractGitTestCase {
         if (isWindows() && currentDirectoryPath.length() > 95) {
             return;
         }
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
 
         WorkflowJob p = rule.jenkins.createProject(WorkflowJob.class, "pipeline-checkout-3-tags");
         p.setDefinition(new CpsFlowDefinition(
             "node {\n" +
+            "    def tokenBranch = ''\n" +
+            "    def tokenRevision = ''\n" +
             "    def checkout1 = checkout([$class: 'GitSCM', branches: [[name: 'git-1.1']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/jenkinsci/git-plugin.git']]])\n" +
             "    echo \"checkout1: ${checkout1}\"\n" +
+            "    tokenBranch = tm '${GIT_BRANCH}'\n" +
+            "    tokenRevision = tm '${GIT_REVISION}'\n" +
+            "    echo \"token1: ${tokenBranch}\"\n" +
+            "    echo \"revision1: ${tokenRevision}\"\n" +
             "    def checkout2 = checkout([$class: 'GitSCM', branches: [[name: 'git-2.0.2']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/jenkinsci/git-plugin.git']]])\n" +
             "    echo \"checkout2: ${checkout2}\"\n" +
+            "    tokenBranch = tm '${GIT_BRANCH,all=true}'\n" +
+            "    tokenRevision = tm '${GIT_REVISION,length=8}'\n" +
+            "    echo \"token2: ${tokenBranch}\"\n" +
+            "    echo \"revision2: ${tokenRevision}\"\n" +
             "    def checkout3 = checkout([$class: 'GitSCM', branches: [[name: 'git-3.0.0']], extensions: [], userRemoteConfigs: [[url: 'https://github.com/jenkinsci/git-plugin.git']]])\n" +
             "    echo \"checkout3: ${checkout3}\"\n" +
+            "    tokenBranch = tm '${GIT_BRANCH,fullName=true}'\n" +
+            "    tokenRevision = tm '${GIT_REVISION,length=6}'\n" +
+            "    echo \"token3: ${tokenBranch}\"\n" +
+            "    echo \"revision3: ${tokenRevision}\"\n" +
             "}", true));
-        WorkflowRun b = rule.assertBuildStatusSuccess(p.scheduleBuild2(0));
+        WorkflowRun b = rule.buildAndAssertSuccess(p);
         
         String log = b.getLog();
-        // The getLineStratingBy is to ease reading the test failure, to avoid Hamcrest shows all the log
-        assertThat(getLineStartsWith(log, "checkout1:"), containsString("checkout1: [GIT_BRANCH:git-1.1, GIT_COMMIT:82db9509c068f60c41d7a4572c0114cc6d23cd0d, GIT_COMMIT_TITLE:[maven-release-plugin] prepare release git-1.1, GIT_URL:https://github.com/jenkinsci/git-plugin.git]"));
-        assertThat(getLineStartsWith(log, "checkout2:"), containsString("checkout2: [GIT_BRANCH:git-2.0.2, GIT_COMMIT:377a0fdbfbf07f70a3e9a566d749b2a185909c33, GIT_COMMIT_TITLE:[maven-release-plugin] prepare release git-2.0.2, GIT_URL:https://github.com/jenkinsci/git-plugin.git]"));
-        assertThat(getLineStartsWith(log, "checkout3:"), containsString("checkout3: [GIT_BRANCH:git-3.0.0, GIT_COMMIT:858dee578b79ac6683419faa57a281ccb9d347aa, GIT_COMMIT_TITLE:[maven-release-plugin] prepare release git-3.0.0, GIT_URL:https://github.com/jenkinsci/git-plugin.git]"));
+        // The getLineStartsWith is to ease reading the test failure, to avoid Hamcrest shows all the log
+        assertThat(getLineStartsWith(log, "checkout1:"), containsString("checkout1: [GIT_BRANCH:git-1.1, GIT_COMMIT:82db9509c068f60c41d7a4572c0114cc6d23cd0d, GIT_URL:https://github.com/jenkinsci/git-plugin.git]"));
+        assertThat(getLineStartsWith(log, "checkout2:"), containsString("checkout2: [GIT_BRANCH:git-2.0.2, GIT_COMMIT:377a0fdbfbf07f70a3e9a566d749b2a185909c33, GIT_URL:https://github.com/jenkinsci/git-plugin.git]"));
+        assertThat(getLineStartsWith(log, "checkout3:"), containsString("checkout3: [GIT_BRANCH:git-3.0.0, GIT_COMMIT:858dee578b79ac6683419faa57a281ccb9d347aa, GIT_URL:https://github.com/jenkinsci/git-plugin.git]"));
+        assertThat(getLineStartsWith(log, "token1:"), containsString("token1: git-1.1"));
+        assertThat(getLineStartsWith(log, "token2:"), containsString("token2: git-1.1")); // Unexpected but current behavior
+        assertThat(getLineStartsWith(log, "token3:"), containsString("token3: git-1.1")); // Unexpected but current behavior
+        assertThat(getLineStartsWith(log, "revision1:"), containsString("revision1: 82db9509c068f60c41d7a4572c0114cc6d23cd0d"));
+        assertThat(getLineStartsWith(log, "revision2:"), containsString("revision2: 82db9509")); // Unexpected but current behavior - should be 377a0fdb
+        assertThat(getLineStartsWith(log, "revision3:"), containsString("revision3: 82db95"));   // Unexpected but current behavior - should be 858dee
     }
 
     private String getLineStartsWith(String text, String startOfLine) {
@@ -2400,39 +2200,45 @@ public class GitSCMTest extends AbstractGitTestCase {
     
     @Test
     public void testPleaseDontContinueAnyway() throws Exception {
+        /* Wastes time waiting for the build to fail */
+        /* Only run on non-Windows and approximately 50% of test runs */
+        /* On Windows, it requires 150 seconds before test finishes */
+        if (isWindows() || random.nextBoolean()) {
+            return;
+        }
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         // create an empty repository with some commits
         testRepo.commit("a","foo",johnDoe, "added");
 
         FreeStyleProject p = createFreeStyleProject();
         p.setScm(new GitSCM(testRepo.gitDir.getAbsolutePath()));
 
-        rule.assertBuildStatusSuccess(p.scheduleBuild2(0));
+        rule.buildAndAssertSuccess(p);
 
         // this should fail as it fails to fetch
         p.setScm(new GitSCM("http://localhost:4321/no/such/repository.git"));
-        rule.assertBuildStatus(Result.FAILURE, p.scheduleBuild2(0).get());
+        rule.buildAndAssertStatus(Result.FAILURE, p);
     }
 
     @Issue("JENKINS-19108")
     @Test
     public void testCheckoutToSpecificBranch() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject p = createFreeStyleProject();
         GitSCM oldGit = new GitSCM("https://github.com/jenkinsci/model-ant-project.git/");
         setupJGit(oldGit);
         oldGit.getExtensions().add(new LocalBranch("master"));
         p.setScm(oldGit);
 
-        FreeStyleBuild b = rule.assertBuildStatusSuccess(p.scheduleBuild2(0));
+        FreeStyleBuild b = rule.buildAndAssertSuccess(p);
         GitClient gc = Git.with(StreamTaskListener.fromStdout(),null).in(b.getWorkspace()).getClient();
-        gc.withRepository(new RepositoryCallback<Void>() {
-            public Void invoke(Repository repo, VirtualChannel channel) throws IOException, InterruptedException {
-                Ref head = repo.findRef("HEAD");
-                assertTrue("Detached HEAD",head.isSymbolic());
-                Ref t = head.getTarget();
-                assertEquals(t.getName(),"refs/heads/master");
+        gc.withRepository((RepositoryCallback<Void>) (repo, channel) -> {
+            Ref head = repo.findRef("HEAD");
+            assertTrue("Detached HEAD",head.isSymbolic());
+            Ref t = head.getTarget();
+            assertEquals(t.getName(),"refs/heads/master");
 
-                return null;
-            }
+            return null;
         });
     }
     
@@ -2448,6 +2254,7 @@ public class GitSCMTest extends AbstractGitTestCase {
      */
     @Test
     public void testCheckoutToDefaultLocalBranch_StarStar() throws Exception {
+       assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
        FreeStyleProject project = setupSimpleProject("master");
 
        final String commitFile1 = "commitFile1";
@@ -2472,6 +2279,7 @@ public class GitSCMTest extends AbstractGitTestCase {
      */
     @Test
     public void testCheckoutToDefaultLocalBranch_NULL() throws Exception {
+       assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
        FreeStyleProject project = setupSimpleProject("master");
 
        final String commitFile1 = "commitFile1";
@@ -2490,6 +2298,7 @@ public class GitSCMTest extends AbstractGitTestCase {
      */
     @Test
     public void testCheckoutSansLocalBranchExtension() throws Exception {
+       assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
        FreeStyleProject project = setupSimpleProject("master");
 
        final String commitFile1 = "commitFile1";
@@ -2497,7 +2306,7 @@ public class GitSCMTest extends AbstractGitTestCase {
        FreeStyleBuild build1 = build(project, Result.SUCCESS, commitFile1);
 
        assertEquals("GIT_BRANCH", "origin/master", getEnvVars(project).get(GitSCM.GIT_BRANCH));
-       assertEquals("GIT_LOCAL_BRANCH", null, getEnvVars(project).get(GitSCM.GIT_LOCAL_BRANCH));
+        assertNull("GIT_LOCAL_BRANCH", getEnvVars(project).get(GitSCM.GIT_LOCAL_BRANCH));
     }
     
     /*
@@ -2506,6 +2315,7 @@ public class GitSCMTest extends AbstractGitTestCase {
      */
     @Test
     public void testCheckoutRelativeTargetDirectoryExtension() throws Exception {
+       assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
        FreeStyleProject project = setupProject("master", false, "checkoutDir");
 
        final String commitFile1 = "commitFile1";
@@ -2523,16 +2333,18 @@ public class GitSCMTest extends AbstractGitTestCase {
      */
     @Test
     public void testCheckoutSansRelativeTargetDirectoryExtension() throws Exception {
+       assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
        FreeStyleProject project = setupSimpleProject("master");
 
        final String commitFile1 = "commitFile1";
        commit(commitFile1, johnDoe, "Commit number 1");
        FreeStyleBuild build1 = build(project, Result.SUCCESS, commitFile1);
 
-       assertEquals("GIT_CHECKOUT_DIR", null, getEnvVars(project).get(GitSCM.GIT_CHECKOUT_DIR));
+        assertNull("GIT_CHECKOUT_DIR", getEnvVars(project).get(GitSCM.GIT_CHECKOUT_DIR));
     }
     @Test
     public void testCheckoutFailureIsRetryable() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject project = setupSimpleProject("master");
 
         // run build first to create workspace
@@ -2555,53 +2367,8 @@ public class GitSCMTest extends AbstractGitTestCase {
     }
 
     @Test
-    public void testInitSparseCheckout() throws Exception {
-        if (!sampleRepo.gitVersionAtLeast(1, 7, 10)) {
-            /* Older git versions have unexpected behaviors with sparse checkout */
-            return;
-        }
-        FreeStyleProject project = setupProject("master", Lists.newArrayList(new SparseCheckoutPath("toto")));
-
-        // run build first to create workspace
-        final String commitFile1 = "toto/commitFile1";
-        commit(commitFile1, johnDoe, "Commit number 1");
-        final String commitFile2 = "titi/commitFile2";
-        commit(commitFile2, johnDoe, "Commit number 2");
-
-        final FreeStyleBuild build1 = build(project, Result.SUCCESS);
-        assertTrue(build1.getWorkspace().child("toto").exists());
-        assertTrue(build1.getWorkspace().child(commitFile1).exists());
-        assertFalse(build1.getWorkspace().child("titi").exists());
-        assertFalse(build1.getWorkspace().child(commitFile2).exists());
-    }
-
-    @Test
-    public void testInitSparseCheckoutBis() throws Exception {
-        if (!sampleRepo.gitVersionAtLeast(1, 7, 10)) {
-            /* Older git versions have unexpected behaviors with sparse checkout */
-            return;
-        }
-        FreeStyleProject project = setupProject("master", Lists.newArrayList(new SparseCheckoutPath("titi")));
-
-        // run build first to create workspace
-        final String commitFile1 = "toto/commitFile1";
-        commit(commitFile1, johnDoe, "Commit number 1");
-        final String commitFile2 = "titi/commitFile2";
-        commit(commitFile2, johnDoe, "Commit number 2");
-
-        final FreeStyleBuild build1 = build(project, Result.SUCCESS);
-        assertTrue(build1.getWorkspace().child("titi").exists());
-        assertTrue(build1.getWorkspace().child(commitFile2).exists());
-        assertFalse(build1.getWorkspace().child("toto").exists());
-        assertFalse(build1.getWorkspace().child(commitFile1).exists());
-    }
-
-    @Test
     public void testSparseCheckoutAfterNormalCheckout() throws Exception {
-        if (!sampleRepo.gitVersionAtLeast(1, 7, 10)) {
-            /* Older git versions have unexpected behaviors with sparse checkout */
-            return;
-        }
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         FreeStyleProject project = setupSimpleProject("master");
 
         // run build first to create workspace
@@ -2616,7 +2383,7 @@ public class GitSCMTest extends AbstractGitTestCase {
         assertTrue(build1.getWorkspace().child("toto").exists());
         assertTrue(build1.getWorkspace().child(commitFile1).exists());
 
-        ((GitSCM) project.getScm()).getExtensions().add(new SparseCheckoutPaths(Lists.newArrayList(new SparseCheckoutPath("titi"))));
+        ((GitSCM) project.getScm()).getExtensions().add(new SparseCheckoutPaths(Collections.singletonList(new SparseCheckoutPath("titi"))));
 
         final FreeStyleBuild build2 = build(project, Result.SUCCESS);
         assertTrue(build2.getWorkspace().child("titi").exists());
@@ -2627,11 +2394,8 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void testNormalCheckoutAfterSparseCheckout() throws Exception {
-        if (!sampleRepo.gitVersionAtLeast(1, 7, 10)) {
-            /* Older git versions have unexpected behaviors with sparse checkout */
-            return;
-        }
-        FreeStyleProject project = setupProject("master", Lists.newArrayList(new SparseCheckoutPath("titi")));
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
+        FreeStyleProject project = setupProject("master", Collections.singletonList(new SparseCheckoutPath("titi")));
 
         // run build first to create workspace
         final String commitFile1 = "toto/commitFile1";
@@ -2656,37 +2420,16 @@ public class GitSCMTest extends AbstractGitTestCase {
     }
 
     @Test
-    public void testInitSparseCheckoutOverAgent() throws Exception {
-        if (!sampleRepo.gitVersionAtLeast(1, 7, 10)) {
-            /* Older git versions have unexpected behaviors with sparse checkout */
-            return;
-        }
-        FreeStyleProject project = setupProject("master", Lists.newArrayList(new SparseCheckoutPath("titi")));
-        project.setAssignedLabel(rule.createSlave().getSelfLabel());
-
-        // run build first to create workspace
-        final String commitFile1 = "toto/commitFile1";
-        commit(commitFile1, johnDoe, "Commit number 1");
-        final String commitFile2 = "titi/commitFile2";
-        commit(commitFile2, johnDoe, "Commit number 2");
-
-        final FreeStyleBuild build1 = build(project, Result.SUCCESS);
-        assertTrue(build1.getWorkspace().child("titi").exists());
-        assertTrue(build1.getWorkspace().child(commitFile2).exists());
-        assertFalse(build1.getWorkspace().child("toto").exists());
-        assertFalse(build1.getWorkspace().child(commitFile1).exists());
-    }
-
-    @Test
     @Issue("JENKINS-22009")
     public void testPolling_environmentValueInBranchSpec() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         // create parameterized project with environment value in branch specification
         FreeStyleProject project = createFreeStyleProject();
         GitSCM scm = new GitSCM(
                 createRemoteRepositories(),
                 Collections.singletonList(new BranchSpec("${MY_BRANCH}")),
                 null, null,
-                Collections.<GitSCMExtension>emptyList());
+                Collections.emptyList());
         project.setScm(scm);
         project.addProperty(new ParametersDefinitionProperty(new StringParameterDefinition("MY_BRANCH", "master")));
 
@@ -2699,7 +2442,6 @@ public class GitSCMTest extends AbstractGitTestCase {
         assertFalse("No changes to git since last build, thus no new build is expected", project.poll(listener).hasChanges());
     }
 
-    @Issue("JENKINS-29066")
     public void baseTestPolling_parentHead(List<GitSCMExtension> extensions) throws Exception {
         // create parameterized project with environment value in branch specification
         FreeStyleProject project = createFreeStyleProject();
@@ -2731,24 +2473,27 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Issue("JENKINS-29066")
     @Test
     public void testPolling_parentHead() throws Exception {
-        baseTestPolling_parentHead(Collections.<GitSCMExtension>emptyList());
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
+        baseTestPolling_parentHead(Collections.emptyList());
     }
 
     @Issue("JENKINS-29066")
     @Test
     public void testPolling_parentHead_DisableRemotePoll() throws Exception {
-        baseTestPolling_parentHead(Collections.<GitSCMExtension>singletonList(new DisableRemotePoll()));
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
+        baseTestPolling_parentHead(Collections.singletonList(new DisableRemotePoll()));
     }
 
     @Test
     public void testPollingAfterManualBuildWithParametrizedBranchSpec() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         // create parameterized project with environment value in branch specification
         FreeStyleProject project = createFreeStyleProject();
         GitSCM scm = new GitSCM(
                 createRemoteRepositories(),
                 Collections.singletonList(new BranchSpec("${MY_BRANCH}")),
                 null, null,
-                Collections.<GitSCMExtension>emptyList());
+                Collections.emptyList());
         project.setScm(scm);
         project.addProperty(new ParametersDefinitionProperty(new StringParameterDefinition("MY_BRANCH", "trackedbranch")));
 
@@ -2817,14 +2562,15 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
 	public void testPolling_CanDoRemotePollingIfOneBranchButMultipleRepositories() throws Exception {
+                assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
 		FreeStyleProject project = createFreeStyleProject();
 		List<UserRemoteConfig> remoteConfigs = new ArrayList<>();
 		remoteConfigs.add(new UserRemoteConfig(testRepo.gitDir.getAbsolutePath(), "origin", "", null));
 		remoteConfigs.add(new UserRemoteConfig(testRepo.gitDir.getAbsolutePath(), "someOtherRepo", "", null));
 		GitSCM scm = new GitSCM(remoteConfigs,
 				Collections.singletonList(new BranchSpec("origin/master")), false,
-				Collections.<SubmoduleConfig> emptyList(), null, null,
-				Collections.<GitSCMExtension> emptyList());
+				Collections.emptyList(), null, null,
+				Collections.emptyList());
 		project.setScm(scm);
 		commit("commitFile1", johnDoe, "Commit number 1");
 
@@ -2839,26 +2585,19 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Issue("JENKINS-24467")
     @Test
     public void testPolling_environmentValueAsEnvironmentContributingAction() throws Exception {
-        // create parameterized project with environment value in branch specification
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
+        // branch specification
         FreeStyleProject project = createFreeStyleProject();
         GitSCM scm = new GitSCM(
                 createRemoteRepositories(),
                 Collections.singletonList(new BranchSpec("${MY_BRANCH}")),
                 null, null,
-                Collections.<GitSCMExtension>emptyList());
+                Collections.emptyList());
         project.setScm(scm);
 
         // Initial commit and build
         commit("toto/commitFile1", johnDoe, "Commit number 1");
         String brokenPath = "\\broken/path\\of/doom";
-        if (!sampleRepo.gitVersionAtLeast(1, 8)) {
-            /* Git 1.7.10.4 fails the first build unless the git-upload-pack
-             * program is available in its PATH.
-             * Later versions of git don't have that problem.
-             */
-            final String systemPath = System.getenv("PATH");
-            brokenPath = systemPath + File.pathSeparator + brokenPath;
-        }
         final StringParameterValue real_param = new StringParameterValue("MY_BRANCH", "master");
         final StringParameterValue fake_param = new StringParameterValue("PATH", brokenPath);
 
@@ -2889,9 +2628,9 @@ public class GitSCMTest extends AbstractGitTestCase {
      */
     private int notifyAndCheckScmName(FreeStyleProject project, ObjectId commit,
             String expectedScmName, int ordinal, GitSCM git, ObjectId... priorCommits) throws Exception {
-        String priorCommitIDs = "";
+        StringBuilder priorCommitIDs = new StringBuilder();
         for (ObjectId priorCommit : priorCommits) {
-            priorCommitIDs = priorCommitIDs + " " + priorCommit;
+            priorCommitIDs.append(" ").append(priorCommit);
         }
         assertTrue("scm polling should detect commit " + ordinal, notifyCommit(project, commit));
 
@@ -2914,37 +2653,6 @@ public class GitSCMTest extends AbstractGitTestCase {
         assertEquals("Wrong SCM Name", expectedScmName, buildData.getScmName());
     }
 
-    /*
-     * Tests that builds have the correctly specified branches, associated with
-     * the commit id, passed with "notifyCommit" URL.
-     */
-    @Ignore("Intermittent failures on stable-3.10 branch, not on stable-3.9 or master")
-    @Issue("JENKINS-24133")
-    // Flaky test distracting from primary focus
-    // @Test
-    public void testSha1NotificationBranches() throws Exception {
-        final String branchName = "master";
-        final FreeStyleProject project = setupProject(branchName, false);
-        project.addTrigger(new SCMTrigger(""));
-        final GitSCM git = (GitSCM) project.getScm();
-        setupJGit(git);
-
-        final String commitFile1 = "commitFile1";
-        commit(commitFile1, johnDoe, "Commit number 1");
-        assertTrue("scm polling should detect commit 1",
-                project.poll(listener).hasChanges());
-        build(project, Result.SUCCESS, commitFile1);
-        final ObjectId commit1 = testRepo.git.revListAll().get(0);
-        notifyAndCheckBranch(project, commit1, branchName, 1, git);
-
-        commit("commitFile2", johnDoe, "Commit number 2");
-        assertTrue("scm polling should detect commit 2", project.poll(listener).hasChanges());
-        final ObjectId commit2 = testRepo.git.revListAll().get(0);
-        notifyAndCheckBranch(project, commit2, branchName, 2, git);
-
-        notifyAndCheckBranch(project, commit1, branchName, 1, git);
-    }
-
     /* A null pointer exception was detected because the plugin failed to
      * write a branch name to the build data, so there was a SHA1 recorded 
      * in the build data, but no branch name.
@@ -2952,6 +2660,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Test
     @Deprecated // Testing deprecated buildEnvVars
     public void testNoNullPointerExceptionWithNullBranch() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         ObjectId sha1 = ObjectId.fromString("2cec153f34767f7638378735dc2b907ed251a67d");
 
         /* This is the null that causes NPE */
@@ -2988,6 +2697,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Test
     @Deprecated // Testing deprecated buildEnvVars
     public void testBuildEnvVarsLocalBranchStarStar() throws Exception {
+       assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
        ObjectId sha1 = ObjectId.fromString("2cec153f34767f7638378735dc2b907ed251a67d");
 
        /* This is the null that causes NPE */
@@ -3030,6 +2740,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Test
     @Deprecated // Testing deprecated buildEnvVars
     public void testBuildEnvVarsLocalBranchNull() throws Exception {
+       assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
        ObjectId sha1 = ObjectId.fromString("2cec153f34767f7638378735dc2b907ed251a67d");
 
        /* This is the null that causes NPE */
@@ -3072,6 +2783,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Test
     @Deprecated // testing deprecated buildEnvVars
     public void testBuildEnvVarsLocalBranchNotSet() throws Exception {
+       assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
        ObjectId sha1 = ObjectId.fromString("2cec153f34767f7638378735dc2b907ed251a67d");
 
        /* This is the null that causes NPE */
@@ -3102,7 +2814,7 @@ public class GitSCMTest extends AbstractGitTestCase {
        scm.buildEnvVars(build, env); // NPE here before fix applied
        
        assertEquals("GIT_BRANCH", "origin/master", env.get("GIT_BRANCH"));
-       assertEquals("GIT_LOCAL_BRANCH", null, env.get("GIT_LOCAL_BRANCH"));
+        assertNull("GIT_LOCAL_BRANCH", env.get("GIT_LOCAL_BRANCH"));
 
        /* Verify mocks were called as expected */
        verify(buildData, times(1)).getLastBuiltRevision();
@@ -3112,6 +2824,7 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void testBuildEnvironmentVariablesSingleRemote() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         ObjectId sha1 = ObjectId.fromString("2cec153f34767f7638378735dc2b907ed251a67d");
 
         List<Branch> branchList = new ArrayList<>();
@@ -3136,11 +2849,11 @@ public class GitSCMTest extends AbstractGitTestCase {
         FreeStyleProject project = setupSimpleProject("*/*");
         GitSCM scm = (GitSCM) project.getScm();
 
-        Map<String, String> env = new HashMap<String, String>();
+        Map<String, String> env = new HashMap<>();
         scm.buildEnvironment(build, env);
 
         assertEquals("GIT_BRANCH is invalid", "origin/master", env.get("GIT_BRANCH"));
-        assertEquals("GIT_LOCAL_BRANCH is invalid", null, env.get("GIT_LOCAL_BRANCH"));
+        assertNull("GIT_LOCAL_BRANCH is invalid", env.get("GIT_LOCAL_BRANCH"));
         assertEquals("GIT_COMMIT is invalid", sha1.getName(), env.get("GIT_COMMIT"));
         assertEquals("GIT_URL is invalid", testRepo.gitDir.getAbsolutePath(), env.get("GIT_URL"));
         assertNull("GIT_URL_1 should not have been set", env.get("GIT_URL_1"));
@@ -3148,6 +2861,7 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     @Test
     public void testBuildEnvironmentVariablesMultipleRemotes() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         ObjectId sha1 = ObjectId.fromString("2cec153f34767f7638378735dc2b907ed251a67d");
 
         List<Branch> branchList = new ArrayList<>();
@@ -3179,14 +2893,14 @@ public class GitSCMTest extends AbstractGitTestCase {
                 userRemoteConfigs,
                 Collections.singletonList(new BranchSpec(branch.getName())),
                 null, null,
-                Collections.<GitSCMExtension>emptyList());
+                Collections.emptyList());
         project.setScm(scm);
 
-        Map<String, String> env = new HashMap<String, String>();
+        Map<String, String> env = new HashMap<>();
         scm.buildEnvironment(build, env);
 
         assertEquals("GIT_BRANCH is invalid", "origin/master", env.get("GIT_BRANCH"));
-        assertEquals("GIT_LOCAL_BRANCH is invalid", null, env.get("GIT_LOCAL_BRANCH"));
+        assertNull("GIT_LOCAL_BRANCH is invalid", env.get("GIT_LOCAL_BRANCH"));
         assertEquals("GIT_COMMIT is invalid", sha1.getName(), env.get("GIT_COMMIT"));
         assertEquals("GIT_URL is invalid", testRepo.gitDir.getAbsolutePath(), env.get("GIT_URL"));
         assertEquals("GIT_URL_1 is invalid", testRepo.gitDir.getAbsolutePath(), env.get("GIT_URL_1"));
@@ -3197,6 +2911,7 @@ public class GitSCMTest extends AbstractGitTestCase {
     @Issue("JENKINS-38241")
     @Test
     public void testCommitMessageIsPrintedToLogs() throws Exception {
+        assumeTrue("Test class max time " + MAX_SECONDS_FOR_THESE_TESTS + " exceeded", isTimeAvailable());
         sampleRepo.init();
         sampleRepo.write("file", "v1");
         sampleRepo.git("commit", "--all", "--message=test commit");
@@ -3256,9 +2971,9 @@ public class GitSCMTest extends AbstractGitTestCase {
         final String notificationPath = rule.getURL().toExternalForm()
                 + "git/notifyCommit?url=" + testRepo.gitDir.toString() + "&sha1=" + commit1;
         final URL notifyUrl = new URL(notificationPath);
-        String notifyContent = null;
+        String notifyContent;
         try (final InputStream is = notifyUrl.openStream()) {
-            notifyContent = IOUtils.toString(is, "UTF-8");
+            notifyContent = new String(is.readAllBytes(), StandardCharsets.UTF_8);
         }
         assertThat(notifyContent, containsString("No Git consumers using SCM API plugin for: " + testRepo.gitDir.toString()));
 
@@ -3279,7 +2994,7 @@ public class GitSCMTest extends AbstractGitTestCase {
 
     private void setupJGit(GitSCM git) {
         git.gitTool="jgit";
-        rule.jenkins.getDescriptorByType(GitTool.DescriptorImpl.class).setInstallations(new JGitTool(Collections.<ToolProperty<?>>emptyList()));
+        rule.jenkins.getDescriptorByType(GitTool.DescriptorImpl.class).setInstallations(new JGitTool(Collections.emptyList()));
     }
 
     /** We clean the environment, just in case the test is being run from a Jenkins job using this same plugin :). */
